# ntnt

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LANGUAGE_GUIDE.md  LANGUAGE_SPEC.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  install.ps1  install.sh  intent_whitepaper.docx  whitepaper.md
.claude/skills/: idd.md
.claude/skills/ntnt/: SKILL.md  intent-template.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: ntnt-dev.agent.md
.github/workflows/: ci.yml  release.yml
design-docs/: INTENT_ASSERTION_LANGUAGE.md  INTENT_DRIVEN_DEVELOPMENT.md  README.md  background_jobs.md  http_updates.md  ial_explorer.html  ial_extension_plan.md  language_comparison.md  studio-mockup-v2.html  template_engine_updates.md
docs/: AGENT_DOCS_INDEX.md  AI_AGENT_GUIDE.md  IAL_REFERENCE.md  INDEX.md  INTENT_ASSERTION_LANGUAGE.md  INTENT_DRIVEN_DEVELOPMENT.md  INTENT_DRIVEN_DEVELOPMENT_V1_ARCHIVE.md  RUNTIME_REFERENCE.md  STDLIB_REFERENCE.md  SYNTAX_REFERENCE.md  WEB_DEPLOYMENT.md  ial.toml  ntnt_language_overview.md  runtime.toml  stdlib.toml  syntax.toml
editors/vscode/intent-lang/: CHANGELOG.md  README.md  language-configuration.json  package.json
editors/vscode/intent-lang/snippets/: intent.json  ntnt.json
editors/vscode/intent-lang/syntaxes/: intent.tmLanguage.json  ntnt.tmLanguage.json
examples/: README.md  benchmark_server.tnt  concurrent_demo.tnt  contract_violation_test.intent  contract_violation_test.tnt  contracts.intent  contracts.tnt  contracts_full.intent  contracts_full.tnt  csv_test.tnt  data_processing.intent  demo.itn  demo.tnt  environment.tnt  fibonacci.intent  fibonacci.tnt  hello.intent  hello.tnt  http_client.intent  http_client.tnt  http_client_demo.tnt  http_server.intent  http_server.tnt  http_server_advanced.intent  http_server_advanced.tnt  http_server_contracts.intent  http_server_contracts.tnt  invariant_violation_test.tnt  invariants.intent  invariants.tnt  invariants_full.tnt  math_demo.tnt  math_science.intent  modules.intent  modules.tnt  ntnt.sql  pattern_matching.intent  phase4_features.intent  phase4_features.tnt  phase4_simple.tnt  (+16 more)
examples/crypto_chart/: crypto.intent  crypto.tnt
examples/ial_demo/: server.intent  server.tnt
examples/intent_demo/: failing.intent  server.intent  server.tnt  server_partial.tnt
examples/myapp/: .env.example  app.tnt  server.tnt
examples/myapp/lib/: db.tnt
examples/myapp/middleware/: 01_logger.tnt
examples/myapp/routes/: about.tnt  index.tnt  users.tnt
examples/myapp/routes/api/: status.tnt
examples/ntnt-lang-org/: .env.example  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  schema.sql  server.intent  server.tnt  website.intent
examples/ntnt-lang-org/assets/: styles.css  syntax-highlight.js
examples/ntnt-lang-org/lib/: blog.tnt  text.tnt
examples/ntnt-lang-org/middleware/: 01_logger.tnt  layout.tnt  logger.tnt
examples/ntnt-lang-org/routes/: blog.tnt  index.tnt  learn.tnt
examples/ntnt-lang-org/views/: blog.html  home.html  layout.html  learn.html  styles.css
examples/static/: app.js  index.html  styles.css
examples/studio-states-demo/: server.intent  server.tnt
examples/website/: layout.html  server.tnt
examples/website/pages/: about.html  examples.html  fetch.html  fetch.json  home.html
plans/: background_jobs.md  high_concurrency_http_server.md  ial_explorer.html  ial_extension_plan.md  ial_features_v1.md  ial_unit_testing.md  ial_vision_v2.md  studio-mockup-v2.html
scripts/: install-hooks.sh  pre-commit
src/: README.md  ast.rs  contracts.rs  error.rs  intent.rs  intent_studio_lite.html  intent_studio_server.rs  intent_studio_v2.html  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  typechecker.rs  types.rs
src/ial/: execute.rs  mod.rs  primitives.rs  resolve.rs  standard.rs  vocabulary.rs
src/stdlib/: collections.rs  concurrent.rs  crypto.rs  csv.rs  env.rs  fs.rs  http.rs  http_bridge.rs  http_server.rs  http_server_async.rs  json.rs  math.rs  mod.rs  path.rs  postgres.rs  sqlite.rs  string.rs  template.rs  time.rs  url.rs
tests/: cli_tests.rs  intent_studio_tests.rs  language_features_tests.rs  type_checker_tests.rs
tests/fixtures/simple_server/: server.intent  server.tnt
(+12 files in other folders)
