[package]
name = "intent"
version = "0.1.6"
edition = "2021"
authors = ["Intent Language Team"]
description = "Intent - A programming language designed for AI-driven development"
license = "MIT"
repository = "https://github.com/joshcramer/intent"

[dependencies]
# Core utilities
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization (for AST export)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pretty printing and colors
colored = "2.0"

# REPL support
rustyline = "13.0"

# Crypto
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
hex = "0.4"

# HTTP Client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# HTTP Server
tiny_http = "0.12"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "intent"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
