[package]
name = "ntnt"
version = "0.2.1"
edition = "2021"
authors = ["NTNT Language Team"]
description = "NTNT (Intent) - A programming language designed for AI-driven development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ntntlang/ntnt"

[dependencies]
# Core utilities
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization (for AST export)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pretty printing and colors
colored = "2.0"

# REPL support
rustyline = "13.0"

# Crypto
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# Regex for pattern matching
regex = "1.10"

# HTTP Client
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "cookies"] }

# HTTP Server
tiny_http = "0.12"

# Database
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
rust_decimal = { version = "1.36", features = ["db-postgres"] }
chrono = "0.4"
chrono-tz = "0.10.4"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "ntnt"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
