[package]
name = "ntnt"
version = "0.3.8"
edition = "2021"
authors = ["NTNT Language Team"]
description = "NTNT (Intent) - A programming language designed for AI-driven development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ntntlang/ntnt"

[dependencies]
# Core utilities
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# TOML parsing (for stdlib docs)
toml = "0.8"

# Serialization (for AST export)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pretty printing and colors
colored = "2.0"

# REPL support
rustyline = "13.0"

# Crypto
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# Regex for pattern matching
regex = "1.10"

# Lazy statics for global state
lazy_static = "1.4"

# URL encoding/decoding
urlencoding = "2.1"

# HTTP Client
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "cookies"] }

# HTTP Server (Axum + Tokio for high-concurrency in production)
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "fs", "timeout"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# HTTP Server (tiny_http for synchronous test mode)
tiny_http = "0.12"

# Ctrl+C handling
ctrlc = "3.4"

# Database
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rust_decimal = { version = "1.36", features = ["db-postgres"] }
chrono = "0.4"
chrono-tz = "0.10.4"

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
libc = "0.2"

[[bin]]
name = "ntnt"
path = "src/main.rs"

[features]
default = []

[profile.release]
opt-level = 3
lto = true

# Fast release builds for development testing (no LTO)
# Usage: cargo build --profile dev-release
[profile.dev-release]
inherits = "release"
lto = false
incremental = true
